--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,6 @@
 PORT=4002
 
-MONGODB_URI=mongodb+srv://<YOUR_DBUSERNAME>:<YOUR_DBPASSWORD>@cluster0.mdxbau1.mongodb.net/LCChatApp?retryWrites=true&w=majority&appName=Cluster0
-JWT_TOKEN=0hTa4U+5hJkjUektQIwImgAULcz7FQe1APCxaRyicz8=
+MONGODB_URI=mongodb+srv://dev:hania@cluster0.wvhy9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_TOKEN=0hTa4U+5hJkjUektQIwImgAULcz7FQe1APCxaRyicz8
+
+NODE_ENV="production"
