--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node index.js",
     "start": "node index.js",
-    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
+    "build": "npm install && npm run build --prefix Frontend"
   },
   "keywords": [
     "MERN"
