--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node index.js",
-    "start": "node index.js",
-     "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
+    "start": "node index.js"
   },
   "keywords": [
     "MERN"
