--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node index.js",
-    "start": "node index.js"
+     "dev": "nodemon backend/index.js",
+    "build":"npm install && npm install --prefix Frontend && npm run build --prefix Frontend",
+    "start":"nodemon backend/index.js"
   },
   "keywords": [
     "MERN"
